2013-06-25 Richard Frith-Macdonald  <rfm@gnu.org>

        * GNUmakefile: bump subminor version 
	* GSIOThreadPool.h:
	* GSIOThreadPool.m:
        Add default for initialisation of shared pool, fix bug in setting
        new thread and add code for shrinking the pool size (previously
        setting it smaller did not actually cause old threads to exit).

2013-02-07 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* GSThreadPool.h, GSCache.m
	  shutup clang warnings

2013-02-03 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSTicker.m: Retain timer so that we can safely invalidate it even
	on thread exit when the runloop of the current thread may have been
	deallocated already.

2012-01-11 Niels Grewe <niels.grewe@halbordnung.de>

	* GSSkipMutableArray.m: Change -initWithObjects:count: declaration
	to match the superclass one in gnustep-base trunk.

2011-10-25 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSFIFO.h:
	* GSFIFO.m:
	Add new method to create a named FIFO and configure it from the
	defaults system.
	* GNUmakefile: bump version to 0.3.2

2011-08-29 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.m: Try to fool clang/llvm to avoid useless warning/error.

2011-08-24 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSFIFO.h:
	* GSFIFO.m:
	Use NSCondition to support multiple producer/consumer on FIFO.
	
2011-06-11 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSFIFO.h:
	* GSFIFO.m:
	Add the ability to monitor statistics on how long the FIFO blocks
	on put and get operations.
	Add methods to get/put multiple items.
	Add method to get stats for all FIFOs.

2011-06-06 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.h:
	* GSCache.m:
	Add a new method to let the delegate know when a cache hit has
	occurred on an item which is nearning the end of its lifetime ...
	providing an opportunity for the delegate to refresh the cache
	before the actual expiry.
	Also fix minor memory leak.

2011-06-05 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSFIFO.h:
	* GSFIFO.m: